--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,7 +18,7 @@
 
   <form method="post" action="{% url 'login' %}" class='LoginForm'>
     {% csrf_token %}
-    <h2 style='text-align: center; margin-bottom: 1rem;'>Please Login</h2>
+    <h2 style='text-align: center; margin-bottom: 1rem;'>Welcome</h2>
     <table>
       <tr>
         <td>{{ form.username.label_tag }}</td>
