--- a/game/templates/workshop.html
+++ b/game/templates/workshop.html
@@ -47,7 +47,7 @@
                 if (equip.className != 'MechCardActive') {
                     equip.className = 'MechCardActive';
                     stats.className = 'MechCardInactive';
-                    equipment.style.display = 'flex';
+                    equipment.style.display = 'grid';
                     statblock.style.display = 'none';
                 }
             })
