--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -16,6 +16,7 @@ body {
     height: 100%;
     background-image: url('/static/img/spacetile.jpg');
     background-repeat: repeat;
+    position: relative;
 }
 
 
@@ -106,6 +107,45 @@ main.MainView {
     border-bottom: 1px dotted black;
 }
 
+
+/* Index Page */
+
+div.Index {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+div.WelcomeCard {
+    width: 600px;
+    height: 475px;
+    display: flex;
+    flex-flow: column;
+    background-color: rgba(211,211,211, 0.75);
+    border-radius: 1rem;
+}
+
+h2.WelcomeBanner {
+    background-color: rgba(211,211,211, 0.6);
+    border-radius: 1rem 1rem 0 0;
+    padding: 0.75rem;
+    text-align: center;
+    font-weight: bold;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+}
+
+p.WelcomeText {
+    background-color: rgba(211,211,211, 0.6);
+    border-radius: 0.5rem;
+    padding: 3rem;
+    margin: 1rem auto;
+    width: 95%;
+    flex: 1;
+}
+
+
 /* Workshop Area */
 
 div.Workshop {
@@ -113,6 +153,13 @@ div.Workshop {
     height: 100%;
     align-items: center;
     justify-content: center;
+}
+
+span#test {
+    color: white;
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
 
 div.MechCard {
@@ -141,7 +188,7 @@ div.MechCardTabs {
 div.MechCardTabs > h3 {
     text-align: center;
     font-weight: bold;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     text-transform: uppercase;
     flex: 1;
     padding: 0.25rem;
@@ -150,42 +197,42 @@ div.MechCardTabs > h3 {
 h3.MechCardEquipInactive {
     border-left: 1px solid black;
     border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    border-top: 2px solid black;
     border-right: none;
     cursor: pointer;
 }
 
 h3.MechCardEquipActive {
     background-color: rgba(211,211,211, 0.6);
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
     border-top: none;
-    border-right: 1px solid black;
+    border-right: 2px solid black;
 }
 
 h3.MechCardStatsInactive {
     border-left: none;
     border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    border-top: 2px solid black;
     border-right: 1px solid black;
     cursor: pointer;
 }
 
 h3.MechCardStatsActive {
     background-color: rgba(211,211,211, 0.6);
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
     border-top: none;
-    border-right: 1px solid black;
+    border-right: 2px solid black;
 }
 
 span.Before {
-    border-top: 1px solid black;
+    border-top: 2px solid black;
     flex: 1;
 }
 
 span.After {
-    border-top: 1px solid black;
+    border-top: 2px solid black;
     flex: 12;
 }
 
@@ -233,7 +280,7 @@ div.MechCardEquipment > div {
 }
 
 div.MechCardEquipment > div > a {
-    background-color: lightgray;
+    border: 1px solid black;
     width: 100px;
     height: 100px;
 }
@@ -266,7 +313,7 @@ div.Deployed {
 
 div.DeployedCard {
     width: 600px;
-    height: 400px;
+    height: 475px;
     display: flex;
     flex-flow: column;
     background-color: rgba(211,211,211, 0.75);
