styled login page and added image to splash pash

--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -5,7 +5,10 @@
 
     <div class='WelcomeCard'>
         <h2 class='WelcomeBanner'>Welcome to Callisto</h2>
-        <p class='WelcomeText'>Greetings and welcome to Callisto</p>
+        <p class='WelcomeText'></p>
+        <div class='WelcomeImage'>
+            <img src='/static/img/moon.png' />
+        </div>
     </div>
 
 </div>
