--- a/game/static/css/styles.css
+++ b/game/static/css/styles.css
@@ -30,13 +30,6 @@ div.LoginContainer {
     flex-direction: column;
 }
 
-form.LoginForm {
-    background-color: rgba(211,211,211, 0.9);
-    border-radius: 1rem;
-    width: 50%;
-    padding: 3rem;
-}
-
 p.LoginError {
     background-color: rgba(211,211,211, 0.9);
     border-radius: 1rem;
@@ -46,6 +39,33 @@ p.LoginError {
     text-align: center;
 }
 
+form.LoginForm {
+    background-color: rgba(211,211,211, 0.9);
+    border-radius: 1rem;
+    width: 50%;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+h2.LoginFormBanner {
+    text-align: center;
+}
+
+form.LoginForm > div {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    width: 50%;
+    margin: 0.5rem auto;
+}
+
+form.LoginForm > div#submit {
+    width: 25%;
+}
 
 /* Main Game UI */
 
@@ -59,7 +79,7 @@ div.Game {
 header.Banner {
     display: flex;
     justify-content: space-around;
-    padding: 1.5rem;
+    padding: 0.5rem;
     border-bottom: 2px solid black;
 }
 
@@ -139,10 +159,16 @@ h2.WelcomeBanner {
 p.WelcomeText {
     background-color: rgba(211,211,211, 0.6);
     border-radius: 0.5rem;
-    padding: 3rem;
+    padding: 1rem;
     margin: 1rem auto;
-    width: 95%;
+    width: 75%;
     flex: 1;
+}
+
+div.WelcomeImage {
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
 
