--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,7 +18,6 @@
 
   <form method="post" action="{% url 'login' %}" class='LoginForm'>
     {% csrf_token %}
-    <h2 class='LoginFormBanner'>Welcome</h2>
     <div>
       {{ form.username.label_tag }}
       {{ form.username }}
@@ -28,7 +27,7 @@
       {{ form.password }}
     </div>
     <div id='submit'>
-      <input type="submit" value="login" />
+      <input type="submit" value="LOGIN" />
     </div>
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
